Revrite css to scss

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,5 +1,5 @@
 <section class="about container">
-    <div class="section-title section-title_position">
+    <div class="section-title section-title__position">
         <h2 class="section-title__lower-item">
             <span class="section-title__upper-item">We work with </span> Amazing
             Services
