--- a/src/html/team.html
+++ b/src/html/team.html
@@ -1,5 +1,5 @@
 <section class="team container">
-    <div class="section-title section-title_position-team">
+    <div class="section-title section-title__position-team">
         <h2 class="section-title__lower-item">
             <span class="section-title__upper-item">Who we are</span> Meet our team
         </h2>
@@ -12,9 +12,9 @@
             commodo consequat.
         </p>
     </div>
-    <ul class="team__member-list">
-        <li class="team__member-list-item">
-            <div class="team__member-list-wrapper">
+    <ul class="team-member__list">
+        <li class="team-member__list-item">
+            <div class="team-member__list-wrapper">
                 <img srcset="./images/MetthewDix.jpg 380w, ./images/MetthewDix@2x.jpg 760w"
                     src="./images/MatthewDix.png" alt="Matthew Dix" sizes="380px" height="470" />
                 <div class="overlay">
@@ -55,11 +55,11 @@
                 </div>
             </div>
 
-            <p class="team__member-name">Matthew Dix</p>
-            <p class="team__member-position">Graphic Design</p>
+            <p class="team-member__name">Matthew Dix</p>
+            <p class="team-member__position">Graphic Design</p>
         </li>
-        <li class="team__member-list-item">
-            <div class="team__member-list-wrapper">
+        <li class="team-member__list-item">
+            <div class="team-member__list-wrapper">
                 <img srcset="
             ./images/Christopher_Campbell.jpg    380w,
             ./images/Christopher_Campbell@2x.jpg 760w
@@ -102,11 +102,11 @@
                 </div>
             </div>
 
-            <p class="team__member-name">Christopher Campbell</p>
-            <p class="team__member-position">Branding/UX design</p>
+            <p class="team-member__name">Christopher Campbell</p>
+            <p class="team-member__position">Branding/UX design</p>
         </li>
-        <li class="team__member-list-item">
-            <div class="team__member-list-wrapper">
+        <li class="team-member__list-item">
+            <div class="team-member__list-wrapper">
                 <img srcset="
             ./images/Michael_Fertig.jpg    380w,
             ./images/Michael_Fertig@2x.jpg 760w
@@ -149,8 +149,8 @@
                 </div>
             </div>
 
-            <p class="team__member-name">Michael Fertig</p>
-            <p class="team__member-position">Developer</p>
+            <p class="team-member__name">Michael Fertig</p>
+            <p class="team-member__position">Developer</p>
         </li>
     </ul>
 </section>
